# tagex

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
tagex/: __init__.py  cli.py  logger.py
tagex/core/: __init__.py  extractor.py  formatter.py  schemas.py
