[project]
name = "tagex"
version = "1.0.0"
description = "ðŸ” æå–ä»£ç ä¸­çš„ç‰¹å®šæ ‡ç­¾ï¼ˆTODOã€FIXMEã€AGENT-TODO ç­‰ï¼‰"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "libcst>=1.8.6",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "mypy>=1.8.0",
    "coverage>=7.4.0",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "loguru>=0.7.0",
    "pytest-cov>=7.0.0",
]

[project.scripts]
tagex = "tagex.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/tagex"
Repository = "https://github.com/yourusername/tagex"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.coverage.run]
source = ["tagex", "main"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]
